# Dijkstra_map_for_Godot-1

./: .gitattributes  .gitignore  .gut_editor_config.json  DijkstraMap.gdextension  README.md  dijkstra map for godot.csproj  dijkstra map for godot.sln  djikstra map for godot.csproj  djikstra map for godot.sln  icon.png.import  project.godot
.github/workflows/: do_not_manually_update_binaries.yml  make_release.yml
Project_Example/: project_example.tscn
Tests/unit/: Test_dijsktra.gd  test_DijkstraMap_manually_updated.gd
addons/dijkstra-map/: DijkstraMap.gdextension  dm_icon.png.import
addons/dijkstra-map/dijkstra_map_library/: DijkstraMap.cs
assets/: assetlib-dijkstra_map_pathfinding-download.png.import  assetlib-dijkstra_map_pathfinding-install.png.import  godot-outline-assetlib.png.import  icon.png.import
dijkstra-map-gd/: Cargo.toml  build.rs
dijkstra-map-gd/src/: lib.rs
dijkstra-map/src/: operation.rs
project_examples/assets/: Archer_32x32.png.import  dragon.png.import  pikeman_32x32.png.import  simple_maze_sprites.png.import  tileset.tres  tileset_32x32.png.import
project_examples/astar_maze_comparison/: astar_maze_comparison.gd  astar_maze_comparison.tscn
project_examples/main/: main.gd  main.tscn  main_tilemap.gdshader
project_examples/shared_movement_example/: archer.gd  archer.tscn  dragon.gd  pikeman.gd  pikeman.tscn  shared_dijkstra_tile_map.gd  shared_movement_example.tscn
project_examples/turn_based_example/: dijkstra_tile_map.gd  knight.gd  turn_based_example.tscn
tests/: gut.tscn
tests/unit/: test_dijsktra.gd
(+13 files in other folders)
