[package]
name = "dijkstra_map_gd"
version = "0.1.0"
authors = ["Astrale", "Matej Sloboda"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
fnv = "1.0.7"
godot = { git = "https://github.com/godot-rust/gdext.git", tag = "v0.1.1", features = ["custom-godot"] }
dijkstra_map = { path = "../dijkstra-map" }

[build-dependencies]
gdnative-doc = "0.0.6"
